--- a/src/wallet/CMakeLists.txt
+++ b/src/wallet/CMakeLists.txt
@@ -46,9 +46,9 @@ set(wallet_private_headers
   ringdb.h
   node_rpc_proxy.h)
 
-monero_private_headers(wallet
+beldex_private_headers(wallet
   ${wallet_private_headers})
-monero_add_library(wallet
+beldex_add_library(wallet
   ${wallet_sources}
   ${wallet_private_headers})
 target_link_libraries(wallet
@@ -75,9 +75,9 @@ set(wallet_rpc_headers)
 set(wallet_rpc_private_headers
   wallet_rpc_server.h)
 
-monero_private_headers(wallet_rpc_server
+beldex_private_headers(wallet_rpc_server
   ${wallet_rpc_private_headers})
-monero_add_executable(wallet_rpc_server
+beldex_add_executable(wallet_rpc_server
   ${wallet_rpc_sources}
   ${wallet_rpc_headers}
   ${wallet_rpc_private_headers})
