--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -79,9 +79,9 @@ set(common_private_headers
   updates.h
   aligned.h)
 
-monero_private_headers(common
+beldex_private_headers(common
   ${common_private_headers})
-monero_add_library(common
+beldex_add_library(common
   ${common_sources}
   ${common_headers}
   ${common_private_headers}
@@ -101,5 +101,5 @@ target_link_libraries(common
     ${OPENSSL_LIBRARIES}
     ${EXTRA_LIBRARIES})
 
-#monero_install_headers(common
+#beldex_install_headers(common
 #  ${common_headers})
