--- a/src/debug_utilities/CMakeLists.txt
+++ b/src/debug_utilities/CMakeLists.txt
@@ -29,8 +29,7 @@
 set(cn_deserialize_sources
   cn_deserialize.cpp
   )
-
-monero_add_executable(cn_deserialize
+beldex_add_executable(cn_deserialize
   ${cn_deserialize_sources}
   ${cn_deserialize_private_headers})
 
@@ -53,7 +52,7 @@ set(object_sizes_sources
   object_sizes.cpp
   )
 
-monero_add_executable(object_sizes
+beldex_add_executable(object_sizes
   ${object_sizes_sources}
   ${object_sizes_private_headers})
 
