--- a/src/version.cpp.in
+++ b/src/version.cpp.in
@@ -1,11 +1,11 @@
-#define DEF_BELDEX_VERSION_TAG "@VERSIONTAG@"
-#define DEF_BELDEX_VERSION "0.1"
-#define DEF_BELDEX_RELEASE_NAME "Ramdius"
-#define DEF_BELDEX_VERSION_FULL DEF_BELDEX_VERSION "-" DEF_BELDEX_VERSION_TAG
+#define DEF_MONERO_VERSION_TAG "@VERSIONTAG@"
+#define DEF_MONERO_VERSION "0.1"
+#define DEF_MONERO_RELEASE_NAME "Ramdius"
+#define DEF_MONERO_VERSION_FULL DEF_MONERO_VERSION "-" DEF_MONERO_VERSION_TAG
 
 #include "version.h"
 
-const char* const BELDEX_VERSION_TAG = DEF_BELDEX_VERSION_TAG;
-const char* const BELDEX_VERSION = DEF_BELDEX_VERSION;
-const char* const BELDEX_RELEASE_NAME = DEF_BELDEX_RELEASE_NAME;
-const char* const BELDEX_VERSION_FULL = DEF_BELDEX_VERSION_FULL;
+const char* const MONERO_VERSION_TAG = DEF_MONERO_VERSION_TAG;
+const char* const MONERO_VERSION = DEF_MONERO_VERSION;
+const char* const MONERO_RELEASE_NAME = DEF_MONERO_RELEASE_NAME;
+const char* const MONERO_VERSION_FULL = DEF_MONERO_VERSION_FULL;
